Relax DCHECK in remote_suggestions_provider_impl

This DCHECK, as Jan explains in the bug, is too restrictive. It's valid
for the state to flip to CATEGORY_EXPLICITLY_DISABLED before the timeout
triggers.

Bug: 803028
Change-Id: Ifd206a583b9dbef5650d1ff04f2da65e9a0459e2
Reviewed-on: https://chromium-review.googlesource.com/898068
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Commit-Queue: Patrick Noland <pnoland@google.com>
Cr-Commit-Position: refs/heads/master@{#534090}
Former-commit-id: 21389bc91483c63cc0468a19610c08673a7c3835